# XML-MasterTool

./: ActiveUser.cpp  ActiveUser.h  GraphVisualizer.cpp  GraphVisualizer.h  Influencer.cpp  Influencer.h  Mutual.cpp  Mutual.h  Readme.md  SearchTopic.cpp  SearchTopic.h  SearchWord.cpp  SearchWord.h  SocialNetwork.cpp  SocialNetwork.h  Suggest.cpp  Token.h  Tree.h  XMLNode.cpp  XMLParser.cpp  XMLParser.h  XMLToJSONConverter.cpp  XMLToJSONConverter.h  XMLTokenizer.cpp  XMLTokenizer.h  XMLTreeBuilder.cpp  XMLTreeBuilder.h  XMLTrreeBuilder.h  comp_decomp.cpp  comp_decomp.h  errorFixing.cpp  errorFixing.h  error_check.cpp  error_check.h  main.cpp  minfiy.cpp  prettify.h  pretty_minny.h++
Classes/: Post.cpp  Post.h  User.cpp  User.h
GUI_Final_Project/: ActiveUser.cpp  ActiveUser.h  CMakeLists.txt  Influencer.cpp  Influencer.h  LauncherWindow.cpp  LauncherWindow.h  Level2Window.cpp  Level2Window.h  Level2Window.ui  Post.cpp  Post.h  Readme.md  SearchTopic.cpp  SearchTopic.h  SearchWord.cpp  SearchWord.h  SocialNetwork.cpp  SocialNetwork.h  Suggest.h  Token.h  User.cpp  User.h  XMLNode.h  XMLToJSONConverter.cpp  XMLTokenizer.cpp  XMLTokenizer.h  XMLTreeBuilder.cpp  XMLTreeBuilder.h  comp_decomp.h  compressed.comp  errorFixing.cpp  errorFixing.h  error_check.cpp  error_check.h  launcherwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+5 more)
test_XML/: fixed.xml  sample.comp  sample.json  sample2.xml
